--- a/src/main/webapp/admin/persons/edit.xhtml
+++ b/src/main/webapp/admin/persons/edit.xhtml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:p="http://primefaces.org/ui"
+<ui:composition template="#{context_path}/resources/templates/page.xhtml"
+                xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:my="http://java.sun.com/jsf/composite/components"
-                template="#{context_path}/resources/templates/page.xhtml">
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:ui="http://java.sun.com/jsf/facelets">
     <ui:define name="title">#{personHome.managed ? msg['pages.admin.persons.edit.title']: msg['pages.admin.persons.add.title']}</ui:define>
     <ui:define name="content">
         <f:metadata>
@@ -15,24 +15,22 @@
             <f:event type="preRenderView"
                      listener="#{personHome.beginConversation}" />
         </f:metadata>
-        <h:form>
-            <h:panelGrid rendered="#{personHome.managed}"
-                         columns="2">
-                <h:outputLabel for="id">
-                    #{msg['entities.person.fields.id']}
-                </h:outputLabel>
-                <h:outputText id="id" 
-                              value="#{personHome.instance.id}"/>
-            </h:panelGrid>
+        <h:form id="form">
+            <my:inputText componentId="id"
+                          readonly="true"
+                          label="#{msg['entities.person.fields.id']}"
+                          value="#{personHome.instance.id}"/>
             <my:inputText componentId="firstName"
                           required="true"
-                          label="#{msg['entities.person.fields.firstname']}"
+                          label="#{msg['entities.person.fields.firstName']}"
                           value="#{personHome.instance.firstName}"/>
+            <my:inputText componentId="middleName"
+                          label="#{msg['entities.person.fields.middleName']}"
+                          value="#{personHome.instance.middleName}"/>
             <my:inputText componentId="lastName"
                           required="true"
-                          label="#{msg['entities.person.fields.lastname']}"
+                          label="#{msg['entities.person.fields.lastName']}"
                           value="#{personHome.instance.lastName}"/>
-            <div class="requiredFields">#{msg['global.fields.requiredInfo']}</div>
             <p:separator/>
             <div class="actions">
                 <p:commandButton action="#{personHome.save}"
@@ -40,8 +38,7 @@
                                  ajax="false"/>
                 <p:commandButton action="#{personHome.cancel}"
                                  value="#{msg['global.actions.cancel']}"
-                                 ajax="false"
-                                 immediate="true"/>
+                                 ajax="false"/>
             </div>
         </h:form>
     </ui:define>
