--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
 Copyright 2014 satrapu.
 
@@ -14,13 +13,9 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="resources/templates/page.xhtml">
-    <ui:define name="title"/>
-    <ui:define name="content">
-        <div class="appWelcome">
-            #{msg['application.welcome']}
-        </div>
-    </ui:define>
-</ui:composition>
+<html>
+    <head>
+        <title>satrapu's Church Management</title>
+        <meta http-equiv="Refresh" content="0; URL=secured/home.xhtml" />
+    </head>
+</html>
