--- a/src/main/webapp/secured/persons/remove.xhtml
+++ b/src/main/webapp/secured/persons/remove.xhtml
@@ -59,7 +59,7 @@ limitations under the License.
                                  value="#{msg['global.actions.remove']}"
                                  ajax="false"
                                  rendered="#{personHome.managed}"
-                                 onclick="return confirm('Are you sure you want to remove this entity?');"/>
+                                 onclick="return confirm('#{msg['pages.admin.persons.remove.confirmation']}');"/>
                 <p:commandButton action="#{personHome.cancel}"
                                  value="#{msg['global.actions.cancel']}"
                                  ajax="false"
