--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 Copyright 2014 satrapu.
 
@@ -13,9 +14,12 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<html>
-    <head>
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+    <h:head>
+        <meta http-equiv="Refresh" 
+              content="0; URL=secured/home.xhtml" />
         <title>satrapu's Church Management</title>
-        <meta http-equiv="Refresh" content="0; URL=secured/home.xhtml" />
-    </head>
+    </h:head>
 </html>
