--- a/src/main/webapp/secured/persons/remove.xhtml
+++ b/src/main/webapp/secured/persons/remove.xhtml
@@ -52,6 +52,8 @@ limitations under the License.
                 </h:outputLabel>
                 <h:outputText id="lastName" 
                               value="#{personHome.instance.lastName}"/>
+		<h:outputText id="emailAddress" 
+                              value="#{personHome.instance.emailAddress.value}"/>
             </h:panelGrid>
             <p:separator/>
             <div class="actions">
