--- a/src/main/webapp/secured/persons/remove.xhtml
+++ b/src/main/webapp/secured/persons/remove.xhtml
@@ -18,6 +18,7 @@ limitations under the License.
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
+		xmlns:my="http://java.sun.com/jsf/composite/components"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
     <ui:define name="title">#{msg['pages.admin.persons.remove.title']}</ui:define>
@@ -31,29 +32,22 @@ limitations under the License.
         </f:metadata>
         <h:form>
             <h:panelGrid rendered="#{personHome.managed}"
-                         columns="2">
-                <h:outputLabel for="id">
-                    #{msg['entities.person.fields.id']}
-                </h:outputLabel>
-                <h:outputText id="id" 
-                              value="#{personHome.instance.id}"/>
-                <h:outputLabel for="firstName">
-                    #{msg['entities.person.fields.firstName']}
-                </h:outputLabel>
-                <h:outputText id="firstName" 
-                              value="#{personHome.instance.firstName}"/>
-                <h:outputLabel for="middleName">
-                    #{msg['entities.person.fields.middleName']}
-                </h:outputLabel>
-                <h:outputText id="middleName" 
-                              value="#{personHome.instance.middleName}"/>
-                <h:outputLabel for="lastName">
-                    #{msg['entities.person.fields.lastName']}
-                </h:outputLabel>
-                <h:outputText id="lastName" 
-                              value="#{personHome.instance.lastName}"/>
-		<h:outputText id="emailAddress" 
-                              value="#{personHome.instance.emailAddress.value}"/>
+                         columns="1">
+		<my:labelAndText componentId="id"
+				 label="#{msg['entities.person.fields.id']}"
+				 value="#{personHome.instance.id}"/>
+		<my:labelAndText componentId="firstName"
+				 label="#{msg['entities.person.fields.firstName']}"
+				 value="#{personHome.instance.firstName}"/>
+		<my:labelAndText componentId="middleName"
+				 label="#{msg['entities.person.fields.middleName']}"
+				 value="#{personHome.instance.middleName}"/>
+		<my:labelAndText componentId="lastName"
+				 label="#{msg['entities.person.fields.lastName']}"
+				 value="#{personHome.instance.lastName}"/>
+		<my:labelAndText componentId="emailAddress"
+				 label="#{msg['entities.person.fields.emailAddress']}"
+				 value="#{personHome.instance.emailAddress.value}"/>
             </h:panelGrid>
             <p:separator/>
             <div class="actions">
