--- a/src/main/webapp/secured/persons/remove.xhtml
+++ b/src/main/webapp/secured/persons/remove.xhtml
@@ -30,49 +30,37 @@ limitations under the License.
             <f:event type="preRenderView"
                      listener="#{personHome.beginConversation}" />
         </f:metadata>
-        <h:form>
-            <h:panelGrid rendered="#{personHome.managed}"
-                         columns="1">
-		<my:labelAndText componentId="id"
-				 label="#{msg['entities.person.fields.id']}"
-				 value="#{personHome.instance.id}"/>
-		<my:labelAndText componentId="firstName"
-				 label="#{msg['entities.person.fields.firstName']}"
-				 value="#{personHome.instance.firstName}"/>
-		<my:labelAndText componentId="middleName"
-				 label="#{msg['entities.person.fields.middleName']}"
-				 value="#{personHome.instance.middleName}"/>
-		<my:labelAndText componentId="lastName"
-				 label="#{msg['entities.person.fields.lastName']}"
-				 value="#{personHome.instance.lastName}"/>
-		<my:labelAndText componentId="emailAddress"
-				 label="#{msg['entities.person.fields.emailAddress']}"
-				 value="#{personHome.instance.emailAddress.value}"/>
-            </h:panelGrid>
-            <p:separator/>
-            <div class="actions">
-		<p:commandButton action="#{personHome.remove}"
-                                 value="#{msg['global.actions.remove']}"
-                                 rendered="#{personHome.managed}">
-		    <p:confirm header="#{msg['pages.admin.persons.remove.title']}" 
-			       message="#{msg['pages.admin.persons.remove.confirmation']}" 
-			       icon="ui-icon-alert" />
-		</p:commandButton>
-                <p:commandButton action="#{personHome.cancel}"
-                                 value="#{msg['global.actions.cancel']}"
-                                 ajax="false"
-                                 immediate="true"/>
-		<p:confirmDialog global="true">
-		    <p:commandButton value="#{msg['global.actions.yes']}" 
-				     type="button" 
-				     styleClass="ui-confirmdialog-yes" 
-				     icon="ui-icon-check" />
-		    <p:commandButton value="#{msg['global.actions.no']}" 
-				     type="button" 
-				     styleClass="ui-confirmdialog-no" 
-				     icon="ui-icon-close" />
-		</p:confirmDialog>
-            </div>
-        </h:form>
+	<h:panelGrid rendered="#{personHome.managed}"
+		     columns="1">
+	    <my:labelAndText componentId="id"
+			     label="#{msg['entities.person.fields.id']}"
+			     value="#{personHome.instance.id}"/>
+	    <my:labelAndText componentId="firstName"
+			     label="#{msg['entities.person.fields.firstName']}"
+			     value="#{personHome.instance.firstName}"/>
+	    <my:labelAndText componentId="middleName"
+			     label="#{msg['entities.person.fields.middleName']}"
+			     value="#{personHome.instance.middleName}"/>
+	    <my:labelAndText componentId="lastName"
+			     label="#{msg['entities.person.fields.lastName']}"
+			     value="#{personHome.instance.lastName}"/>
+	    <my:labelAndText componentId="emailAddress"
+			     label="#{msg['entities.person.fields.emailAddress']}"
+			     value="#{personHome.instance.emailAddress.value}"/>
+	</h:panelGrid>
+	<p:separator/>
+	<div class="actions">
+	    <p:commandButton action="#{personHome.remove}"
+			     value="#{msg['global.actions.remove']}"
+			     rendered="#{personHome.managed}">
+		<p:confirm header="#{msg['pages.admin.persons.remove.confirmationDialog.title']}" 
+			   message="#{msg['pages.admin.persons.remove.confirmationDialog.text']}" 
+			   icon="ui-icon-alert" />
+	    </p:commandButton>
+	    <p:commandButton action="#{personHome.cancel}"
+			     value="#{msg['global.actions.cancel']}"
+			     ajax="false"
+			     immediate="true"/>
+	</div>
     </ui:define>
 </ui:composition>
