Replaced person name part primitive type with strong type. Configured person email address as embedded field.

--- a/src/main/webapp/secured/persons/list.xhtml
+++ b/src/main/webapp/secured/persons/list.xhtml
@@ -67,19 +67,19 @@ limitations under the License.
 		<f:facet name="header">
 		    #{msg['entities.person.fields.firstName']}
 		</f:facet>
-		<h:outputText value="#{person.firstName}" />
+		<h:outputText value="#{person.firstName.value}" />
 	    </p:column>
 	    <p:column>
 		<f:facet name="header">
 		    #{msg['entities.person.fields.middleName']}
 		</f:facet>
-		<h:outputText value="#{person.middleName}" />
+		<h:outputText value="#{person.middleName.value}" />
 	    </p:column>
 	    <p:column>
 		<f:facet name="header">
 		    #{msg['entities.person.fields.lastName']}
 		</f:facet>
-		<h:outputText value="#{person.lastName}" />
+		<h:outputText value="#{person.lastName.value}" />
 	    </p:column>
 	    <p:column>
 		<f:facet name="header">
