--- a/src/main/webapp/secured/persons/edit.xhtml
+++ b/src/main/webapp/secured/persons/edit.xhtml
@@ -37,14 +37,14 @@ limitations under the License.
 	<my:inputText componentId="firstName"
 		      required="true"
 		      label="#{msg['entities.person.fields.firstName']}"
-		      value="#{personHome.instance.firstName}"/>
+		      value="#{personHome.instance.firstName.value}"/>
 	<my:inputText componentId="middleName"
 		      label="#{msg['entities.person.fields.middleName']}"
-		      value="#{personHome.instance.middleName}"/>
+		      value="#{personHome.instance.middleName.value}"/>
 	<my:inputText componentId="lastName"
 		      required="true"
 		      label="#{msg['entities.person.fields.lastName']}"
-		      value="#{personHome.instance.lastName}"/>
+		      value="#{personHome.instance.lastName.value}"/>
 	<my:inputText componentId="emailAddress"
 		      required="true"
 		      label="#{msg['entities.person.fields.emailAddress']}"
