--- a/src/main/webapp/secured/persons/remove.xhtml
+++ b/src/main/webapp/secured/persons/remove.xhtml
@@ -37,13 +37,13 @@ limitations under the License.
 			     value="#{personHome.instance.id}"/>
 	    <my:labelAndText componentId="firstName"
 			     label="#{msg['entities.person.fields.firstName']}"
-			     value="#{personHome.instance.firstName}"/>
+			     value="#{personHome.instance.firstName.value}"/>
 	    <my:labelAndText componentId="middleName"
 			     label="#{msg['entities.person.fields.middleName']}"
-			     value="#{personHome.instance.middleName}"/>
+			     value="#{personHome.instance.middleName.value}"/>
 	    <my:labelAndText componentId="lastName"
 			     label="#{msg['entities.person.fields.lastName']}"
-			     value="#{personHome.instance.lastName}"/>
+			     value="#{personHome.instance.lastName.value}"/>
 	    <my:labelAndText componentId="emailAddress"
 			     label="#{msg['entities.person.fields.emailAddress']}"
 			     value="#{personHome.instance.emailAddress.value}"/>
