Removed "admin" part from person page related message keys.

--- a/src/main/webapp/secured/persons/edit.xhtml
+++ b/src/main/webapp/secured/persons/edit.xhtml
@@ -21,7 +21,7 @@ limitations under the License.
                 xmlns:my="http://java.sun.com/jsf/composite/components"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
-    <ui:define name="title">#{personHome.managed ? msg['pages.admin.persons.edit.title']: msg['pages.admin.persons.add.title']}</ui:define>
+    <ui:define name="title">#{personHome.managed ? msg['pages.persons.edit.title']: msg['pages.persons.add.title']}</ui:define>
     <ui:define name="content">
         <f:metadata>
             <f:viewParam name="id" 
