--- a/src/main/webapp/secured/persons/list.xhtml
+++ b/src/main/webapp/secured/persons/list.xhtml
@@ -20,7 +20,7 @@ limitations under the License.
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <ui:define name="title">#{msg['pages.admin.persons.list.title']}</ui:define>
+    <ui:define name="title">#{msg['pages.persons.list.title']}</ui:define>
     <ui:define name="content">
 	<p:outputLabel rendered="#{personList.data.rowCount == 0}"
 		       value="#{msg['global.noRecords']}"/>
@@ -91,7 +91,7 @@ limitations under the License.
 	<p:separator/>
 	<div class="actions">
 	    <p:commandButton action="edit"
-			     value="#{msg['pages.admin.persons.list.actions.add']}"
+			     value="#{msg['pages.persons.list.actions.add']}"
 			     ajax="false"
 			     immediate="true"/>
 	</div>
