Changed entity version message key.

--- a/src/main/webapp/secured/persons/list.xhtml
+++ b/src/main/webapp/secured/persons/list.xhtml
@@ -59,7 +59,7 @@ limitations under the License.
 	    </p:column>
 	    <p:column>
 		<f:facet name="header">
-		    #{msg['entities.person.fields.version']}
+		    #{msg['entities.fields.version']}
 		</f:facet>
 		<h:outputText value="#{person.version}" />
 	    </p:column>
