Fixed invalid EL expression causing the data table selection event listener to not work anymore.

--- a/src/main/webapp/secured/discipleship/availabilityAsTeachers.xhtml
+++ b/src/main/webapp/secured/discipleship/availabilityAsTeachers.xhtml
@@ -33,7 +33,7 @@ limitations under the License.
 		     paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"  
 		     rowsPerPageTemplate="5,10,25,50,100"
 		     rows="25"
-		     rowKey="#{discipleshipTeacherInfo}.personId}"
+		     rowKey="#{discipleshipTeacherInfo.personId}"
 		     lazy="true"
 		     selection="#{discipleshipTeacherList.selectedPersons}">
 	    <p:column selectionMode="multiple"
