Issue #4: Manage person availability for acting as a discipleship teacher
Formatted code to increase ternary operator visibility.

--- a/src/main/webapp/secured/discipleship/availabilityAsTeachers.xhtml
+++ b/src/main/webapp/secured/discipleship/availabilityAsTeachers.xhtml
@@ -39,8 +39,8 @@ limitations under the License.
 	    <p:column selectionMode="multiple"
 		      style="width:16px;text-align:center"/>
 	    <p:column headerText="#{msg['model.dsicipleshipTeacherInfo.fields.availabilityStatus']}">
-		<h:outputText value="#{discipleshipTeacherInfo.availableAsTeacher? 
-				       msg['pages.discipleship.availabilityAsTeachers.status.available']
+		<h:outputText value="#{discipleshipTeacherInfo.availableAsTeacher
+				       ? msg['pages.discipleship.availabilityAsTeachers.status.available']
 				       : msg['pages.discipleship.availabilityAsTeachers.status.unavailable']}" />
 	    </p:column>
 	    <p:column headerText="#{msg['model.dsicipleshipTeacherInfo.fields.personId']}">
