Refactored JPA entities in order to model a person's interest for discipleship.

--- a/src/main/webapp/secured/persons/list.xhtml
+++ b/src/main/webapp/secured/persons/list.xhtml
@@ -55,16 +55,16 @@ limitations under the License.
 		<h:outputText value="#{person.version}" />
 	    </p:column>
 	    <p:column headerText="#{msg['entities.person.fields.firstName']}">
-		<h:outputText value="#{person.firstName.value}" />
+		<h:outputText value="#{person.firstName}" />
 	    </p:column>
 	    <p:column headerText="#{msg['entities.person.fields.middleName']}">
-		<h:outputText value="#{person.middleName.value}" />
+		<h:outputText value="#{person.middleName}" />
 	    </p:column>
 	    <p:column headerText="#{msg['entities.person.fields.lastName']}">
-		<h:outputText value="#{person.lastName.value}" />
+		<h:outputText value="#{person.lastName}" />
 	    </p:column>
 	    <p:column headerText="#{msg['entities.person.fields.emailAddress']}">
-		<h:outputText value="#{person.emailAddress.value}" />
+		<h:outputText value="#{person.emailAddress}" />
 	    </p:column>
 	</p:dataTable>
 	<p:separator/>
