--- a/src/main/webapp/secured/persons/edit.xhtml
+++ b/src/main/webapp/secured/persons/edit.xhtml
@@ -37,18 +37,18 @@ limitations under the License.
 	<my:inputText componentId="firstName"
 		      required="true"
 		      label="#{msg['entities.person.fields.firstName']}"
-		      value="#{personHome.instance.firstName.value}"/>
+		      value="#{personHome.instance.firstName}"/>
 	<my:inputText componentId="middleName"
 		      label="#{msg['entities.person.fields.middleName']}"
-		      value="#{personHome.instance.middleName.value}"/>
+		      value="#{personHome.instance.middleName}"/>
 	<my:inputText componentId="lastName"
 		      required="true"
 		      label="#{msg['entities.person.fields.lastName']}"
-		      value="#{personHome.instance.lastName.value}"/>
+		      value="#{personHome.instance.lastName}"/>
 	<my:inputText componentId="emailAddress"
 		      required="true"
 		      label="#{msg['entities.person.fields.emailAddress']}"
-		      value="#{personHome.instance.emailAddress.value}"/>
+		      value="#{personHome.instance.emailAddress}"/>
 	<p:separator/>
 	<div class="actions">
 	    <p:commandButton action="#{personHome.save}"
