--- a/src/main/webapp/secured/persons/remove.xhtml
+++ b/src/main/webapp/secured/persons/remove.xhtml
@@ -37,16 +37,16 @@ limitations under the License.
 			     value="#{personHome.instance.id}"/>
 	    <my:labelAndText componentId="firstName"
 			     label="#{msg['entities.person.fields.firstName']}"
-			     value="#{personHome.instance.firstName.value}"/>
+			     value="#{personHome.instance.firstName}"/>
 	    <my:labelAndText componentId="middleName"
 			     label="#{msg['entities.person.fields.middleName']}"
-			     value="#{personHome.instance.middleName.value}"/>
+			     value="#{personHome.instance.middleName}"/>
 	    <my:labelAndText componentId="lastName"
 			     label="#{msg['entities.person.fields.lastName']}"
-			     value="#{personHome.instance.lastName.value}"/>
+			     value="#{personHome.instance.lastName}"/>
 	    <my:labelAndText componentId="emailAddress"
 			     label="#{msg['entities.person.fields.emailAddress']}"
-			     value="#{personHome.instance.emailAddress.value}"/>
+			     value="#{personHome.instance.emailAddress}"/>
 	</h:panelGrid>
 	<p:separator/>
 	<div class="actions">
