--- a/src/main/webapp/secured/persons/edit.xhtml
+++ b/src/main/webapp/secured/persons/edit.xhtml
@@ -17,47 +17,48 @@ limitations under the License.
 <ui:composition template="#{context_path}/resources/templates/page.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:my="http://java.sun.com/jsf/composite/components"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
-    <ui:define name="title">#{personHome.managed ? msg['pages.persons.edit.title']: msg['pages.persons.add.title']}</ui:define>
+    <ui:define
+            name="title">#{personHome.managed ? msg['pages.persons.edit.title']: msg['pages.persons.add.title']}</ui:define>
     <ui:define name="content">
         <f:metadata>
-            <f:viewParam name="id" 
+            <f:viewParam name="id"
                          value="#{personHome.id}"
                          converter="personIdConverter"/>
             <f:event type="preRenderView"
                      listener="#{personHome.beginConversation}"/>
         </f:metadata>
-	<my:inputText componentId="id"
-		      readonly="true"
-		      label="#{msg['entities.person.fields.id']}"
-		      value="#{personHome.instance.id}"/>
-	<my:inputText componentId="firstName"
-		      required="true"
-		      label="#{msg['entities.person.fields.firstName']}"
-		      value="#{personHome.instance.firstName}"/>
-	<my:inputText componentId="middleName"
-		      label="#{msg['entities.person.fields.middleName']}"
-		      value="#{personHome.instance.middleName}"/>
-	<my:inputText componentId="lastName"
-		      required="true"
-		      label="#{msg['entities.person.fields.lastName']}"
-		      value="#{personHome.instance.lastName}"/>
-	<my:inputText componentId="emailAddress"
-		      required="true"
-		      label="#{msg['entities.person.fields.emailAddress']}"
-		      value="#{personHome.instance.emailAddress}"/>
-	<p:separator/>
-	<div class="actions">
-	    <p:commandButton action="#{personHome.save}"
-			     value="#{msg['global.actions.save']}"
-			     ajax="false"/>
-	    <p:commandButton action="#{personHome.cancel}"
-			     value="#{msg['global.actions.cancel']}"
-			     ajax="false"
-			     immediate="true"/>
-	</div>
+        <my:inputText componentId="id"
+                      readonly="true"
+                      label="#{msg['entities.person.fields.id']}"
+                      value="#{personHome.instance.id}"/>
+        <my:inputText componentId="firstName"
+                      required="true"
+                      label="#{msg['entities.person.fields.firstName']}"
+                      value="#{personHome.instance.firstName}"/>
+        <my:inputText componentId="middleName"
+                      label="#{msg['entities.person.fields.middleName']}"
+                      value="#{personHome.instance.middleName}"/>
+        <my:inputText componentId="lastName"
+                      required="true"
+                      label="#{msg['entities.person.fields.lastName']}"
+                      value="#{personHome.instance.lastName}"/>
+        <my:inputText componentId="emailAddress"
+                      required="true"
+                      label="#{msg['entities.person.fields.emailAddress']}"
+                      value="#{personHome.instance.emailAddress}"/>
+        <p:separator/>
+
+        <div class="actions">
+            <p:commandButton action="#{personHome.save}"
+                             value="#{msg['global.actions.save']}"
+                             ajax="false"/>
+            <p:commandButton action="#{personHome.cancel}"
+                             value="#{msg['global.actions.cancel']}"
+                             ajax="false"
+                             immediate="true"/>
+        </div>
     </ui:define>
 </ui:composition>
